@@ -7,19 +7,12 @@
 *********************************************************************/
 
 /*
- * $Id: Viewer.c,v 1.50 2007/12/21 15:14:44 crc_canada Exp $
+ * $Id: Viewer.c,v 1.51 2008/03/06 17:28:37 crc_canada Exp $
  *
  */
 
 #include "headers.h"
 #include "Viewer.h"
-#ifdef AQUA
-#define KeyPress        2
-#define KeyRelease      3
-#define ButtonPress     4
-#define ButtonRelease   5
-#define MotionNotify    6
-#endif
 
 static int viewer_type = NONE;
 int viewer_initialized = FALSE;
